--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,19 +1,11 @@
-h1 {
-  color: rgb(114, 191, 190);
-  text-align: center;
+.barpair .text_head {
+    fill:black;
+    font:18px sans-serrif;
+    text-anchor:end;
+}
+.barpair .text_tail {
+    fill:black;
+    font:12px sand-serrif;
+    text-anchor:start;
 }
 
-#color {
-  width: 300px;
-  height: 300px;
-  margin: 0 auto;
-}
-
-button {
-  cursor: pointer;
-  display: block;
-  width: 100px;
-  outline: 0;
-  border: 0;
-  margin: 20px auto;
-}
