--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,23 +1,68 @@
 .barpair .text_head {
-    fill:black;
-    font:18px sans-serrif;
+    fill:#474747;
+    font:18px sans-serif;
     text-anchor:end;
 }
 .barpair .text_tail {
-    fill:black;
-    font:12px sand-serrif;
+    fill:#474747;
+    font:12px sans-serif;
     text-anchor:start;
 }
 #map {
-    height:95%;
+    background: #F4F4F4;
+    width: 100%;
+    height: 80%;
+    top: 0;
+    left: 0;
 }
 #outlines {
-    fill:#333;
-    stroke:#000;
+    fill:#FCFCFC;
+    stroke:#F4F4F4;
     stroke-linejoin:round;
     stroke-linecap:round;
 }
 .route {
     fill:none;
-    stroke:red;
+    stroke:#0F8BDA;
+    stroke-width: 2px;
+}
+#display {
+    position: relative;
+    width: 100%;
+    height 40%
+    top: 450px;
+    background: #FFFFFF;
+}
+#timeline {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+}
+
+.col-xs-2 {
+    color: #474747;
+    font: 24px sans-serif;
+}
+
+.text_country {
+    color: #474747;
+    font: 28px sans-serif;
+}
+
+.circle_left {
+    fill: none;
+    stroke: #D7D7D7;
+    stroke-width: 6px;
+}
+
+.circle_right {
+    fill: none;
+    stroke: #0F8BDA;
+    stroke-width: 6px;
+}
+
+.text_count {
+    color: #474747;
+    font: 16px sans-serif;
 }
