--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -9,6 +9,7 @@
     text-anchor:start;
 }
 #map {
+    position: fixed;
     background: #F4F4F4;
     width: 100%;
     height: 80%;
@@ -29,8 +30,7 @@
 #display {
     position: relative;
     width: 100%;
-    height 40%
-    top: 450px;
+    top: 500px;
     background: #FFFFFF;
 }
 #timeline {
